# moustique

./: .gitignore  CLI_EXAMPLES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TESTING.md  TLS_IMPLEMENTATION_SUMMARY.md  TLS_SETUP.md  accesslog.go  auth.go  broker.go  config.example.tls.yaml  config.go  config.yaml  database.go  go.mod  go.sum  landing_server.go  main.go  ratelimit.go  security.go  server.go  utils.go  webamin.go
.github/workflows/: pypi_publish.yml  python-publish.yml  release.yml
clients/go/: README.md  go.mod  main.go
clients/go/moustique/: client.go  example_test.go  utils.go
clients/java/: pom.xml
clients/java/src/main/java/moustique/: Demo.java  MoustiqueClient.java  (+1 more)
clients/javascript/: .npmignore  API.md  README.md  package.json
clients/javascript/examples/: browser.html
clients/javascript/moustique/: index.js
clients/javascript/tests/: test_client.js
clients/perl/: Moustique.pm  README.md
clients/python/: README.md  pyproject.toml  setup.py
clients/python/moustique/: client.py
clients/python/moustique_client.egg-info/: PKG-INFO  SOURCES.txt
clients/python/tests/: test_client.py
cmd/moustique-cli/: README.md  main.go
cmd/moustique_client/: main.go
static/: admin.html  admin.html.v1  admin_v3notworking.html  signup.html  superadmin.html
static/landing/: index.html
tests/: README.md  go.mod  go_test.go  javascript_test.js  javascript_test.mjs  perl_test.pl  python_test.py  setup_test_user.sh  test_all_clients.sh  test_explode  test_explode.go  test_explode.pl  test_go_client.go
