[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moustique-client"
version = "0.1.0"
description = "Moustique pub/sub client for Python"
authors = [{name = "Moustique"}]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.8"